# sci-agent-cli-core

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: coding-agent-pipeline.md  contract-v1.md
docs/plans/: 2026-03-01-core-v1-bootstrap-implementation.md  2026-03-01-core-v1-design.md  2026-03-02-conformance-strict-schema-design.md  2026-03-02-conformance-strict-schema-implementation.md  2026-03-02-post-bootstrap-agent-runbook-design.md  2026-03-02-post-bootstrap-agent-runbook-implementation.md
examples/: minimal_demo_driver.py
src/sci_agent_cli_core/: __init__.py  conformance.py  contracts.py  driver.py  errors.py  runtime.py  scaffold.py
tests/: test_conformance.py  test_runtime.py
