[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sci-agent-cli-core"
version = "0.1.1"
description = "Strict nqctl-core-compatible CLI runtime for science instrument drivers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "black>=24.8.0",
    "mypy>=1.11.0",
    "pytest>=8.3.0",
    "ruff>=0.6.0",
]

[project.scripts]
sci-cli-conformance = "sci_agent_cli_core.conformance:main"
sci-cli-bootstrap = "sci_agent_cli_core.scaffold:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["sci_agent_cli_core*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["sci_agent_cli_core"]
warn_unused_configs = true
